# api/handler/auth_handler.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/Tomoki108/burny/domain"
+	"github.com/Tomoki108/burny/handler/io"
 	"github.com/Tomoki108/burny/usecase"
 	"github.com/labstack/echo/v4"
 )
@@ -18,16 +19,21 @@ type AuthHandler struct {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
+// @Param        request body io.SignUpRequest true "sign up request"
 // @Success      201 {object} domain.User
 // @Failure      400
 // @Failure      500
 // @Router       /sign_up [post]
 func (h AuthHandler) SignUp(c echo.Context) error {
-	user := new(domain.User)
-	if err := c.Bind(user); err != nil {
+	req := new(io.SignUpRequest)
+	if err := c.Bind(req); err != nil {
 		return c.JSON(http.StatusBadRequest, err)
 	}
 
+	user := &domain.User{
+		Email:    req.Email,
+		Password: req.Password,
+	}
 	err := h.Usecase.SignUp(user)
 	if errors.Is(err, usecase.ErrEmailAlreadyExists) {
 		return c.JSON(http.StatusConflict, err)
@@ -44,7 +50,8 @@ func (h AuthHandler) SignUp(c echo.Context) error {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Success      200
+// @Param        request body io.SignInRequest true "sign in request"
+// @Success      200 {object} io.SignInResponse
 // @Failure      400
 // @Failure      500
 // @Router       /sign_in [post]
@@ -59,5 +66,8 @@ func (h AuthHandler) SignIn(c echo.Context) error {
 		return c.JSON(http.StatusUnauthorized, err)
 	}
 
-	return c.JSON(http.StatusOK, echo.Map{"token": jwtToken})
+	res := io.SignInResponse{
+		JwtToken: jwtToken,
+	}
+	return c.JSON(http.StatusOK, res)
 }
