# api/handler/io/auth_io.go
@@ -1,0 +1,12 @@
+package io
+
+type SignUpRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type SignInRequest SignUpRequest
+
+type SignInResponse struct {
+	JwtToken string `json:"token"`
+}
